--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^13.0.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-history-api-fallback": "^2.1.0",
     "express-session": "^1.14.0",
     "jquery": "^3.1.0",
     "mongoose": "^4.5.3",
