--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^15.2.1",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.2.1",
+    "react-ga": "^2.1.2",
     "react-router": "^2.6.0",
     "uid": "0.0.2"
   },
