--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.15.2",
     "browserify": "^13.0.1",
     "connect-history-api-fallback": "^1.3.0",
+    "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
